--- a/src/covid/covid.scss
+++ b/src/covid/covid.scss
@@ -1,17 +1,27 @@
 // @import "../../root.scss"; 
 
-@import "../root.scss";
+@import "../root.scss"; 
 
 .widgetContainer {
-  background-color: $ui-background;
+    background-color: $ui-background;
 }
 
-.newServiceEnrolmentBtn {
-  //margin: 0 $spacing-03;
-  margin-bottom: 0.5em;
-  text-align: right;
+.widgetHeaderContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: $spacing-04 0 $spacing-04 $spacing-05;
 }
 
-.newServiceEnrolmentBtn > button {
-  background-color: $ui-background;
+.widgetHeaderContainer > h4:after {
+    content: "";
+    display: block;
+    width: 2rem;
+    padding-top: 0.188rem;
+    border-bottom: 0.375rem solid $brand-teal-01;
 }
+
+.toggleButtons {
+    width: fit-content;
+    margin: 0 $spacing-03;
+  }
