--- a/src/covid/dashboard.scss
+++ b/src/covid/dashboard.scss
@@ -3,8 +3,11 @@
 }
 
 .noMarker button {
-  background-color: #e5e5e5 !important;
-  border-top: 2px solid #005d5d;
+  background-color: #f5f5f5 !important;
+  border-top: 2px solid #999999;
+  margin-top: 8px;
+  padding-top: 8px ; 
+  padding-bottom: 8px ; 
 }
 
 .noMarker ul li a {
