--- a/src/covid/dashboard.scss
+++ b/src/covid/dashboard.scss
@@ -1,14 +1,25 @@
-
 .noMarker {
-    list-style-type: none;
-  }
-  
-  .currentNavItem > a {
-    background-color: #e0e0e0 !important;
-    color: #161616 !important;
-    border-left-color: #005d5d !important;
-  }
-  
-  .hide {
-    display: none;
-  }
+  list-style-type: none;
+}
+
+.noMarker button {
+  background-color: #f5f5f5 !important;
+  border-top: 2px solid #999999;
+  margin-top: 8px;
+  padding-top: 8px ; 
+  padding-bottom: 8px ; 
+}
+
+.noMarker ul li a {
+  padding-left: 40px !important;
+}
+
+.currentNavItem > a {
+  background-color: #f5f5f5 !important;
+  color: #161616 !important;
+  border-left-color: #005d5d !important;
+}
+
+.hide {
+  display: none;
+}
