--- a/src/covid/dashboard.scss
+++ b/src/covid/dashboard.scss
@@ -3,11 +3,10 @@
 }
 
 .noMarker button {
-  background-color: #f5f5f5 !important;
-  border-top: 2px solid #999999;
-  margin-top: 8px;
-  padding-top: 8px ; 
-  padding-bottom: 8px ; 
+  margin-top: 2px;
+  padding-top: 2px ; 
+  padding-bottom: 2px ; 
+  font: lighter  ;
 }
 
 .noMarker ul li a {
@@ -15,11 +14,13 @@
 }
 
 .currentNavItem > a {
-  background-color: #f5f5f5 !important;
+  background-color: #cecece !important;
   color: #161616 !important;
   border-left-color: #005d5d !important;
+  font: bolder ;
 }
 
 .hide {
   display: none;
 }
+
