--- a/src/covid/dashboard.scss
+++ b/src/covid/dashboard.scss
@@ -2,11 +2,11 @@
   list-style-type: none;
 }
 
-.noMarker button { 
-  background-color: #f5f5f5 !important; 
-  margin-top: 4px;
-  padding-top: 4px ;  
-  padding-bottom: 8px ; 
+.noMarker button {
+  margin-top: 2px;
+  padding-top: 2px ; 
+  padding-bottom: 2px ; 
+  font: lighter  ;
 }
 
 .noMarker ul li a {
@@ -14,11 +14,13 @@
 }
 
 .currentNavItem > a {
-  background-color: #f5f5f5 !important;
+  background-color: #cecece !important;
   color: #161616 !important;
   border-left-color: #005d5d !important;
+  font: bolder ;
 }
 
 .hide {
   display: none;
 }
+
