OHRI-399 ohri form patient header

--- a/src/components/patient-banner/patient-banner.scss
+++ b/src/components/patient-banner/patient-banner.scss
@@ -1,9 +1,12 @@
 @import "../../root.scss";
 
 .patientBannerContainer {
+  display: flex;
+  width: 100%;
+  position:sticky;
+  flex-direction: row;
   align-items: baseline;
   padding: 0;
-  width: inherit;
 }
 
 .patientBannerContainer > div {
