--- a/src/covid/covid.scss
+++ b/src/covid/covid.scss
@@ -1,6 +1,6 @@
-// @import "../../root.scss"; 
+// @import "../../root.scss";
 
-@import "../root.scss"; 
+@import "../root.scss";
 
 .widgetContainer {
     background-color: $ui-background;
@@ -18,7 +18,7 @@
     display: block;
     width: 2rem;
     padding-top: 0.188rem;
-    border-bottom: 0.375rem solid $brand-teal-01;
+    border-bottom: 0.375rem solid;
 }
 
 .toggleButtons {
