--- a/src/utils/sidenav-links.scss
+++ b/src/utils/sidenav-links.scss
@@ -1,3 +1,5 @@
+@import '../root.scss';
+
 .noMarker {
   list-style-type: none;
 }
@@ -5,5 +7,5 @@
 .currentNavItem > a {
   background-color: #e0e0e0 !important;
   color: #161616 !important;
-  border-left-color: #005d5d !important;
+  border-left-color: $brand-color-01 !important;
 }
