--- a/src/covid/covid.scss
+++ b/src/covid/covid.scss
@@ -1,5 +1,3 @@
-// @import "../../root.scss";
-
 @import "../root.scss";
 
 .widgetContainer {
@@ -18,7 +16,7 @@
     display: block;
     width: 2rem;
     padding-top: 0.188rem;
-    border-bottom: 0.375rem solid;
+    border-bottom: 0.375rem solid $brand-color-01;
 }
 
 .toggleButtons {
