--- a/src/covid/dashboard.scss
+++ b/src/covid/dashboard.scss
@@ -1,11 +1,13 @@
+@import '../root.scss';
+
 .noMarker {
   list-style-type: none;
 }
 
 .noMarker button {
   margin-top: 2px;
-  padding-top: 2px ; 
-  padding-bottom: 2px ; 
+  padding-top: 2px ;
+  padding-bottom: 2px ;
   font: lighter  ;
 }
 
@@ -16,7 +18,7 @@
 .currentNavItem > a {
   background-color: #cecece !important;
   color: #161616 !important;
-  border-left-color: #005d5d !important;
+  border-left-color: $brand-color-01 !important;
   font: bolder ;
 }
 
