--- a/src/forms/components/sidebar/ohri-form-sidebar.component.scss
+++ b/src/forms/components/sidebar/ohri-form-sidebar.component.scss
@@ -2,7 +2,6 @@
 
 .sidebar {
   width: 12rem;
-  //padding: 0 0 109px;
   min-height: 8rem;
   overscroll-behavior: contain;
   margin: 1px 13px 15px 0;
@@ -54,7 +53,7 @@
 
 // Sidebar-Section
 .sidebarSection {
-  border-left: 0.5rem solid #9ef0f0;
+  border-left: 0.5rem solid $brand-color-03;
   height: auto;
   margin: 0.122rem 0 0.122rem;
   padding: 0.382rem 0.375rem 0.118rem 1rem;
@@ -63,7 +62,7 @@
 }
 
 .sidebarSectionActive {
-  border-left: 0.5rem solid #009d9a;
+  border-left: 0.5rem solid $brand-color-01;
   height: auto;
   font-weight: 600;
   margin: 0.122rem 0 0.122rem;
@@ -73,7 +72,7 @@
 }
 
 .sidebarSectionDone {
-  border-left: 0.5rem solid #42be65;
+  border-left: 0.5rem solid $brand-color-02;
   height: auto;
   margin: 0.122rem 0 0.122rem;
   padding: 0.382rem 0.375rem 0.118rem 1rem;
