OHRI-597 programme dashboard on high res and tile ui design improvements

--- a/src/workspace/patient-list-workspace.scss
+++ b/src/workspace/patient-list-workspace.scss
@@ -1,9 +1,22 @@
 @import "../root.scss";
 
+.patientListWorkspaceContainer {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 9001;
+  background-color: #e0e0e0;
+  color: #ededed;
+  padding: 1rem 2rem;
+  margin-top: 48px;
+}
+
 .container {
   border-top: 0.063rem solid $ui-03;
   border-bottom: 0.063rem solid $ui-03;
-  background-color: $ui-01;
+  background-color: #ededed;
   margin: 40px auto;
   color: $ui-05;
   z-index: 1;
@@ -12,7 +25,7 @@
   right: 0;
   left: 0;
   object-fit: contain;
-  max-width: 1440px;
+  max-width: 100%;
   height: inherit;
 }
 
@@ -21,7 +34,6 @@
   display: flex;
   width: auto;
   border-bottom: 1px solid $ui-03;
-  // background-color: $ui-03;
 }
 
 .bannerTitle {
@@ -42,12 +54,12 @@
   padding-bottom: 16px;
 }
 
-.row {
+.patientListRow {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-top: 0.875rem;
+  background-color: #f4f4f4;
 }
 
 .rowContent {
