--- a/packages/esm-covid-app/src/root.scss
+++ b/packages/esm-covid-app/src/root.scss
@@ -1,7 +1,5 @@
-@import "~carbon-components/scss/globals/scss/vendor/@carbon/elements/scss/type/styles";
-@import "~carbon-components/src/globals/scss/vendor/@carbon/layout/scss/generated/spacing";
-@import "~carbon-components/src/globals/scss/vendor/@carbon/layout/scss/generated/layout";
-@import "carbon-components/scss/globals/scss/typography.scss";
+@use '@carbon/styles/scss/spacing';
+@use '@carbon/styles/scss/type';
 @import "~@openmrs/esm-styleguide/src/vars";
 
 $ui-01: #f4f4f4;
@@ -104,21 +102,21 @@ div[class*='-esm-login__styles__center'] > img {
   width: 16rem !important;
 }
 
-:global(.bx--overflow-menu) > div {
+:global(.cds--overflow-menu) > div {
   width: 15rem !important;
 }
 
-nav :global(.bx--accordion__title) {
+nav :global(.cds--accordion__title) {
   color: #525252;
   font-weight: 600 !important;
 }
 
-nav :global(.bx--accordion__content) {
+nav :global(.cds--accordion__content) {
   padding-bottom: 0 !important;
   padding-top: 0 !important;
 }
 
-nav :global(.bx--accordion__content)>a {
+nav :global(.cds--accordion__content)>a {
   background-color: #cecece !important;
   color: #161616 !important;
   border-left-color: $brand-color-01  !important;
