--- a/packages/esm-covid-app/src/root.scss
+++ b/packages/esm-covid-app/src/root.scss
@@ -25,55 +25,51 @@ $brand-color-03: #3197D9; // underline - 3197D9
 $button-primary: #0078A6;
 
 .productiveHeading01 {
-  @include carbon--type-style("productive-heading-01");
+  @include type.type-style("heading-compact-01");
 }
 
 .productiveHeading02 {
-  @include carbon--type-style("productive-heading-02");
+  @include type.type-style("heading-compact-02");
 }
 
 .productiveHeading03 {
-  @include carbon--type-style("productive-heading-03");
+  @include type.type-style("heading-03");
 }
 
 .productiveHeading04 {
-  @include carbon--type-style("productive-heading-04");
+  @include type.type-style("heading-04");
 }
 
 .productiveHeading05 {
-  @include carbon--type-style("productive-heading-05");
+  @include type.type-style("heading-05");
 }
 
 .productiveHeading06 {
-  @include carbon--type-style("productive-heading-06");
+  @include type.type-style("heading-06");
 }
 
 .bodyShort01 {
-  @include carbon--type-style("body-short-01");
+  @include type.type-style("body-compact-01");
 }
 
 .helperText01 {
-  @include carbon--type-style("helper-text-01");
+  @include type.type-style("helper-text-01");
 }
 
 .bodyShort02 {
-  @include carbon--type-style("body-short-02");
+  @include type.type-style("body-compact-02");
 }
 
 .bodyLong01 {
-  @include carbon--type-style("body-long-01");
+  @include type.type-style("body-01");
 }
 
 .bodyLong02 {
-  @include carbon--type-style("body-long-02");
+  @include type.type-style("body-02");
 }
 
 .label01 {
-  @include carbon--type-style("label-01");
-}
-
-.text01 {
-  color: $text-01;
+  @include type.type-style("label-01");
 }
 
 .text02 {
